array.island.Island.scala.error
Erreur de compilation :
Island:6: error: not found: type i
    if (num[i] < nump){
            ^Island:6: error: value num of type Array[Int] does not take type parameters.
    if (num[i] < nump){
           ^Island:8: error: not found: type i
      nump = num[i]
                 ^Island:8: error: value num of type Array[Int] does not take type parameters.
      nump = num[i]
                ^Island:10: error: not found: type i
      nump = num[i]
                 ^Island:10: error: value num of type Array[Int] does not take type parameters.
      nump = num[i]
                ^